[project]
name = "hfclaw"
version = "0.1.0"
description = "OpenClaw Gateway sync utility for HuggingFace deployment"
requires-python = ">=3.12"
dependencies = ["huggingface_hub>=0.20.0"]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
